--- a/welcome.yml
+++ b/welcome.yml
@@ -1,5 +1,9 @@
 name: Post welcome comment
 on:
   pull_request:
-    types: [opened]  
+    types: [opened]
+jobs:
+  build:
+    name: Post welcome comment
+    runs-on: ubuntu-latest
     
